fix pattern library rendering on mobile

--- a/less/pages/styleguide.less
+++ b/less/pages/styleguide.less
@@ -32,6 +32,7 @@
   text-align: center;
   background-color: #f9f9f9;
   border: 1px solid #fff;
+  font-size: 14px;
 }
 .bs-glyphicons .glyphicon,
 .bs-glyphicons .fa,
@@ -54,6 +55,7 @@
   .bs-glyphicons {
     margin-right: 0;
     margin-left: 0;
+    font-size: 16px;
   }
   .bs-glyphicons li {
     width: 12.5%;
@@ -81,11 +83,19 @@
   border-radius: 3px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @screen-sm-min) {
   .color-swatch {
     width: 100px;
     height: 100px;
   }
+}
+
+@media (max-width: @screen-sm-max) {
+.row--color{
+  > div + div {
+    margin-top: 2em;
+  }
+}
 }
 
 /* Framework colors */
